# lurk

./: Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: CICD.yml  build-binary.yml  ci.yml
assets/: screencast.sh
examples/: tracer.rs
src/: app.rs  args.rs  cli.rs  config.rs  lib.rs  main.rs  style.rs  syscall_info.rs  syscalls_i64.rs  system_call_names.rs
src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
