[package]
name = "lurk-cli"
version = "0.3.3"
edition = "2021"
authors = ["Jakob Waibel <mail@jakobwaibel.com>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
description = "lurk is a pretty (simple) alternative to strace."
license = "MIT OR Apache-2.0"

[[bin]]
name = "lurk"
path = "src/main.rs"

[features]
default = []

# Includes the syscall tables for all architectures.
all = [
#    "aarch64", "arm", "mips", "mips64", "powerpc", "powerpc64", "s390x",
#    "sparc", "sparc64", "x86",
    "x86_64"
]

# Enable syscall tables for individual architectures.
#aarch64 = []
#arm = []
#mips = []
#mips64 = []
#powerpc = []
#powerpc64 = []
#s390x = []
#sparc = []
#sparc64 = []
#x86 = []
x86_64 = []

[dependencies]
ansi_term = "0.12"
anyhow = "1"
atty = "0.2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
libc = "0.2"
linux-personality = "1"
nix = { version = "0.27", features = ["ptrace", "signal"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syscalls = { version = "0.6.14", features = ["full"] }
users = "0.11"
